--- a/Data-Collection-WS.ipynb
+++ b/Data-Collection-WS.ipynb
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "metadata": {
     "tags": []
    },
@@ -130,12 +130,13 @@
    ],
    "source": [
     "!pip3 install beautifulsoup4\n",
+    "\n",
     "!pip3 install requests"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {
     "tags": []
    },
@@ -159,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {
     "tags": []
    },
@@ -229,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "metadata": {
     "tags": []
    },
@@ -261,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "metadata": {
     "tags": []
    },
@@ -280,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "metadata": {
     "tags": []
    },
@@ -298,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
    "metadata": {
     "tags": []
    },
@@ -339,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "metadata": {
     "tags": []
    },
@@ -364,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 42,
    "metadata": {
     "tags": []
    },
@@ -631,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 43,
    "metadata": {
     "tags": []
    },
@@ -658,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 44,
    "metadata": {
     "tags": []
    },
@@ -691,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 45,
    "metadata": {
     "tags": []
    },
@@ -740,420 +741,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 46,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SpaceX\n",
-      "Success\n",
-      "\n",
-      "Failure\n",
-      "NASA\n",
-      "Success\n",
-      "Failure\n",
-      "NASA\n",
-      "Success\n",
-      "No attempt\n",
-      "\n",
-      "NASA\n",
-      "Success\n",
-      "\n",
-      "No attempt\n",
-      "NASA\n",
-      "Success\n",
-      "\n",
-      "No attempt\n",
-      "\n",
-      "MDA\n",
-      "Success\n",
-      "Uncontrolled\n",
-      "SES\n",
-      "Success\n",
-      "No attempt\n",
-      "Thaicom\n",
-      "Success\n",
-      "No attempt\n",
-      "NASA\n",
-      "Success\n",
-      "\n",
-      "Controlled\n",
-      "Orbcomm\n",
-      "Success\n",
-      "Controlled\n",
-      "AsiaSat\n",
-      "Success\n",
-      "No attempt\n",
-      "AsiaSat\n",
-      "Success\n",
-      "No attempt\n",
-      "\n",
-      "NASA\n",
-      "Success\n",
-      "Uncontrolled\n",
-      "NASA\n",
-      "Success\n",
-      "Failure \n",
-      "USAF\n",
-      "Success\n",
-      "\n",
-      "Controlled\n",
-      "ABS\n",
-      "Success\n",
-      "\n",
-      "No attempt\n",
-      "NASA\n",
-      "Success\n",
-      "\n",
-      "Failure\n",
-      "None\n",
-      "Success\n",
-      "\n",
-      "No attempt\n",
-      "NASA\n",
-      "Failure\n",
-      "Precluded\n",
-      "Orbcomm\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "NASA\n",
-      "Success\n",
-      "\n",
-      "Failure\n",
-      "SES\n",
-      "Success\n",
-      "\n",
-      "Failure\n",
-      "NASA\n",
-      "Success\n",
-      "Success\n",
-      "SKY Perfect JSAT Group\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "Thaicom\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "ABS\n",
-      "Success\n",
-      "\n",
-      "Failure\n",
-      "NASA\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "SKY Perfect JSAT Group\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "Iridium Communications\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "NASA\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "EchoStar\n",
-      "Success\n",
-      "\n",
-      "No attempt\n",
-      "SES\n",
-      "Success\n",
-      "Success\n",
-      "NRO\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "Inmarsat\n",
-      "Success\n",
-      "\n",
-      "No attempt\n",
-      "NASA\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "Bulsatcom\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "Iridium Communications\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "Intelsat\n",
-      "Success\n",
-      "\n",
-      "No attempt\n",
-      "NASA\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "NSPO\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "USAF\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "Iridium Communications\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "SES S.A.\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "KT Corporation\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "NASA\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "Iridium Communications\n",
-      "Success\n",
-      "Controlled\n",
-      "Northrop Grumman\n",
-      "Success\n",
-      "Success\n",
-      "SES\n",
-      "Success\n",
-      "Controlled\n",
-      "Hisdesat\n",
-      "Success\n",
-      "No attempt\n",
-      "Hispasat\n",
-      "Success\n",
-      "No attempt\n",
-      "Iridium Communications\n",
-      "Success\n",
-      "No attempt\n",
-      "NASA\n",
-      "Success\n",
-      "No attempt\n",
-      "NASA\n",
-      "Success\n",
-      "Success\n",
-      "Thales-Alenia\n",
-      "Success\n",
-      "Success\n",
-      "Iridium Communications\n",
-      "Success\n",
-      "No attempt\n",
-      "SES\n",
-      "Success\n",
-      "No attempt\n",
-      "NASA\n",
-      "Success\n",
-      "No attempt\n",
-      "Telesat\n",
-      "Success\n",
-      "Success\n",
-      "Iridium Communications\n",
-      "Success\n",
-      "Success\n",
-      "Telkom Indonesia\n",
-      "Success\n",
-      "Success\n",
-      "Telesat\n",
-      "Success\n",
-      "Success\n",
-      "CONAE\n",
-      "Success\n",
-      "Success\n",
-      "Es'hailSat\n",
-      "Success\n",
-      "Success\n",
-      "Spaceflight Industries\n",
-      "Success\n",
-      "Success\n",
-      "NASA\n",
-      "Success\n",
-      "\n",
-      "Failure\n",
-      "USAF\n",
-      "Success\n",
-      "No attempt\n",
-      "Iridium Communications\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "PSN\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "NASA\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "NASA\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "SpaceX\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "Canadian Space Agency\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "NASA\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "Spacecom\n",
-      "Success\n",
-      "\n",
-      "No attempt\n",
-      "SpaceX\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "NASA\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "Sky Perfect JSAT\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "SpaceX\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "NASA\n",
-      "Success\n",
-      "\n",
-      "No attempt\n",
-      "\n",
-      "SpaceX\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "SpaceX\n",
-      "Success\n",
-      "\n",
-      "Failure\n",
-      "NASA\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "SpaceX\n",
-      "Success\n",
-      "\n",
-      "Failure\n",
-      "SpaceX\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "NASA\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "SpaceX\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "SpaceX\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "U.S. Space Force\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "Republic of Korea Army\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "SpaceX\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "SpaceX\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "CONAE\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "SpaceX\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "SpaceX\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "SpaceX\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "SpaceX\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "USSF\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "NASA\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "NASA\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "SpaceX\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "NASA\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "Sirius XM\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "NRO\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "Türksat\n",
-      "Success\n",
-      "\n",
-      "Success\n",
-      "SpaceX\n",
-      "Success\n",
-      "\n",
-      "Success\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'string'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_68/1732097397.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     68\u001b[0m             \u001b[0;31m# Customer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     69\u001b[0m             \u001b[0;31m# TODO: Append the customer into launch_dict with key `Customer`\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 70\u001b[0;31m             \u001b[0mcustomer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstring\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     71\u001b[0m             \u001b[0mlaunch_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Customer'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcustomer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     72\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcustomer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'string'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "extracted_row = 0\n",
     "#Extract each table \n",
@@ -1224,21 +816,21 @@
     "            \n",
     "            # Customer\n",
     "            # TODO: Append the customer into launch_dict with key `Customer`\n",
-    "            customer = row[6].a.string\n",
+    "            customer = row[6].a.string if row[6].a else row[6].get_text(strip=True)\n",
     "            launch_dict['Customer'].append(customer)\n",
-    "            print(customer)\n",
+    "            #print(customer)\n",
     "            \n",
     "            # Launch outcome\n",
     "            # TODO: Append the launch_outcome into launch_dict with key `Launch outcome`\n",
     "            launch_outcome = list(row[7].strings)[0]\n",
     "            launch_dict['Launch outcome'].append(launch_outcome)\n",
-    "            print(launch_outcome)\n",
+    "            #print(launch_outcome)\n",
     "            \n",
     "            # Booster landing\n",
     "            # TODO: Append the launch_outcome into launch_dict with key `Booster landing`\n",
     "            booster_landing = landing_status(row[8])\n",
     "            launch_dict['Booster landing'].append(booster_landing)\n",
-    "            print(booster_landing)\n",
+    "            #print(booster_landing)\n",
     "            "
    ]
   },
@@ -1251,22 +843,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 47,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jupyterlab/conda/envs/python/lib/python3.7/site-packages/ipykernel_launcher.py:1: DeprecationWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Flight No.</th>\n",
+       "      <th>Launch site</th>\n",
+       "      <th>Payload</th>\n",
+       "      <th>Payload mass</th>\n",
+       "      <th>Orbit</th>\n",
+       "      <th>Customer</th>\n",
+       "      <th>Launch outcome</th>\n",
+       "      <th>Version Booster</th>\n",
+       "      <th>Booster landing</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>CCAFS</td>\n",
+       "      <td>Dragon Spacecraft Qualification Unit</td>\n",
+       "      <td>0</td>\n",
+       "      <td>LEO</td>\n",
+       "      <td>SpaceX</td>\n",
+       "      <td>Success\\n</td>\n",
+       "      <td>F9 v1.1</td>\n",
+       "      <td>Failure</td>\n",
+       "      <td>4 June 2010</td>\n",
+       "      <td>18:45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>CCAFS</td>\n",
+       "      <td>Dragon</td>\n",
+       "      <td>0</td>\n",
+       "      <td>LEO</td>\n",
+       "      <td>NASA</td>\n",
+       "      <td>Success</td>\n",
+       "      <td>F9 v1.1</td>\n",
+       "      <td>Failure</td>\n",
+       "      <td>8 December 2010</td>\n",
+       "      <td>15:43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>CCAFS</td>\n",
+       "      <td>Dragon</td>\n",
+       "      <td>525 kg</td>\n",
+       "      <td>LEO</td>\n",
+       "      <td>NASA</td>\n",
+       "      <td>Success</td>\n",
+       "      <td>F9 v1.1</td>\n",
+       "      <td>No attempt\\n</td>\n",
+       "      <td>22 May 2012</td>\n",
+       "      <td>07:44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>CCAFS</td>\n",
+       "      <td>SpaceX CRS-1</td>\n",
+       "      <td>4,700 kg</td>\n",
+       "      <td>LEO</td>\n",
+       "      <td>NASA</td>\n",
+       "      <td>Success\\n</td>\n",
+       "      <td>F9 v1.1</td>\n",
+       "      <td>No attempt</td>\n",
+       "      <td>8 October 2012</td>\n",
+       "      <td>00:35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>CCAFS</td>\n",
+       "      <td>SpaceX CRS-2</td>\n",
+       "      <td>4,877 kg</td>\n",
+       "      <td>LEO</td>\n",
+       "      <td>NASA</td>\n",
+       "      <td>Success\\n</td>\n",
+       "      <td>F9 v1.1</td>\n",
+       "      <td>No attempt\\n</td>\n",
+       "      <td>1 March 2013</td>\n",
+       "      <td>15:10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Flight No. Launch site                               Payload Payload mass  \\\n",
+       "0          1       CCAFS  Dragon Spacecraft Qualification Unit            0   \n",
+       "1          2       CCAFS                                Dragon            0   \n",
+       "2          3       CCAFS                                Dragon       525 kg   \n",
+       "3          4       CCAFS                          SpaceX CRS-1     4,700 kg   \n",
+       "4          5       CCAFS                          SpaceX CRS-2     4,877 kg   \n",
+       "\n",
+       "  Orbit Customer Launch outcome Version Booster Booster landing  \\\n",
+       "0   LEO   SpaceX      Success\\n         F9 v1.1         Failure   \n",
+       "1   LEO     NASA        Success         F9 v1.1         Failure   \n",
+       "2   LEO     NASA        Success         F9 v1.1    No attempt\\n   \n",
+       "3   LEO     NASA      Success\\n         F9 v1.1      No attempt   \n",
+       "4   LEO     NASA      Success\\n         F9 v1.1    No attempt\\n   \n",
+       "\n",
+       "              Date   Time  \n",
+       "0      4 June 2010  18:45  \n",
+       "1  8 December 2010  15:43  \n",
+       "2      22 May 2012  07:44  \n",
+       "3   8 October 2012  00:35  \n",
+       "4     1 March 2013  15:10  "
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df= pd.DataFrame({ key:pd.Series(value) for key, value in launch_dict.items() })"
+    "df= pd.DataFrame({ key:pd.Series(value) for key, value in launch_dict.items() })\n",
+    "\n",
+    "df.head()"
    ]
   },
   {
